--- a/Front/src/app/pages/home/home.component.html
+++ b/Front/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
 </form>
 
 <div class="buttons">
-  <button>О нас</button>
+  <button>О на</button>
   <button>Контакты</button>
   <button>Посмотреть альбомы</button>
 </div>
