Слегка переделал страницы. Добавил подобие проверки и добавления пользователя.

--- a/Front/src/app/pages/login/login.component.html
+++ b/Front/src/app/pages/login/login.component.html
@@ -41,6 +41,7 @@
     <button (click)="goBack($event)" class="btn btn-secondary">
       Back
     </button>
+    <button type="submit" (click)="goReg($event)">Зарегестрироваться</button>
   </form>
 
 </div>
