--- a/Front/src/app/pages/boards/boards.component.html
+++ b/Front/src/app/pages/boards/boards.component.html
@@ -13,7 +13,7 @@
             (create)="handleCreateBoard($event)"
             (close)="showModal = false">
             </app-create-board>
-            <div *ngFor="let board of boards" class="board-card" (click)="openBoard(board.id)">
+            <div *ngFor="let board of boards" class="board-card" (click)="openBoard(board.title)">
                 <h3>{{ board.title }}</h3>
             </div>
         </div>
