--- a/Front/src/app/pages/register/register.component.css
+++ b/Front/src/app/pages/register/register.component.css
@@ -1,17 +1,42 @@
+* {
+  font-family: 'Roboto', sans-serif !important;
+}
 body {
     background: linear-gradient(to right, #fce4ec, #e3f2fd);
     font-family: 'Inter', sans-serif;
   }
-  
+  .top-bar {
+    width: 100%;
+    height: 50px; /* Высота черной линии */
+    background-color: rgb(22, 21, 21);
+    position: fixed; /* Фиксируем элемент сверху */
+    top: 0;
+    left: 0;
+    z-index: 1000; /* Убедитесь, что она выше других элементов */
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px; /* Добавляем отступы */
+    box-sizing: border-box;
+  }
+  .logo {
+    height: 150px; /* Высота логотипа */
+    width: auto; /* Автоматическая ширина для сохранения пропорций */
+    display: block; /* Убираем лишние отступы */
+    margin-left: 20px; /* Отступ слева */
+  }
   .login-container {
     max-width: 400px;
-    margin: 80px auto;
+    margin: 80px auto; /* Центрируем контейнер */
     padding: 40px 30px;
     background-color: #ffffff;
     border-radius: 20px;
     box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
     text-align: center;
     transition: all 0.3s ease;
+    margin-top: 1000px; /* Добавляем отступ сверху, равный высоте top-bar */
+    margin-left: 600px;
   }
   
   .login-container:hover {
@@ -91,4 +116,30 @@ body {
   button.btn-secondary:hover {
     background-color: #757575;
   }
+  .footer {
+    background-color: #f9f9f9;
+    padding: 60px 20px;
+    border-top: 1px solid #ddd;
+    text-align: center;
+    margin-top: 175px;
+  }
+  
+  .footer-container {
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+  }
+  
+ 
+  
+  .footer .about p {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #444;
+  }
+  
+ 
   
